Fixed login page css

--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -124,7 +124,7 @@
                         <input id="pres_pass" type="password" class="login-form-control" name="password" placeholder="enter presentation password">
                     </div>
 					<span class="btn-group" id="buttonGroup">
-                    	<input type="button" id="pres_login_button" value="Open presentation" class="btn btn-default">
+                    	<input type="button" id="pres_login_button" style="font-size:18px;" value="Open presentation" class="btn btn-default">
 					</span>
 					<center style="margin-top:10px"><a href="javascript:showView('getKey');">How to get a presentation ID &amp; password?</a></center>
 				</form>
