--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -268,11 +268,11 @@
 				<h4 id="loginError" style="color: #FF0000; display:none"></h4>
                 <form role="form" id="signInForm">
                 <input type="hidden" name="redirect" value="<%= request.headers.referer %>">
-                    <div class="form-group">
+                    <div class="form-group" id="loginEmailFormGroup">
                         <label for="Username">Email</label>
                         <input id="signinEmail" type="email" class="form-control" name="email" placeholder="Enter email">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="loginPasswordFormGroup">
                         <label for="exampleInputPassword1">Password</label>
                         <input id="signinPassword" type="password" class="form-control" name="password" placeholder="Password">
                     </div>
