--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -47,18 +47,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- remote stylesheet -->
     <!--<link rel="stylesheet" type="text/css" href="../remote/css/index.css">-->
-		<script>
-		function showWindow() {
-			$("#loadingPage").fadeOut(200);
-			$("#mainSlide").fadeIn(2000);
-		}
-		</script>
 </head>
 
-<body onload="showWindow()"> <!--onresize="resizeCanvas()">-->
+<body> <!--onresize="resizeCanvas()">-->
 
 <div id="loadingPage" class="centerText">
-<img src="/A1/img/loading_spinner.gif" width="100">
+<img src="/A1/img/loading_spinner.gif" width="50">
 </div>
 
 <div class='orientationOverlay' id='orientationOverlay'>
@@ -66,7 +60,7 @@
 </div>
 
 
-<div id="mainSlide" style="display: none">
+<div id="mainSlide">
 
 	<div class="UI botRow" id="navButtons" style="display: none">
 			<div class="UI button button_unpressed" id="prev" style="height:50px; line-height:50px;">
@@ -162,7 +156,7 @@
 		<div class="closevideo" id="closePassOverlay" style='margin-right:30px;' title="Close Video"></div>
 		<div id="getPassResult" class="centerText"></div>
 	</div>
-	
+
 
 	<div class='renamePresentationOverlay' id='renamePresentationOverlay'>
 		<div class="closevideo" id="closeRenamePresentationOverlay" style='margin-right:30px;'></div>
