Final UI for A1 :D

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -121,7 +121,7 @@
 
 		<!--center-->
       <div id="screensharing" class="rsContainer">
-        <h1><div class="closeVideo" id="closescreensharing" style="position: absolute; right: 1%; top: 8%;" title="Close Screen Share">
+        <h1><div class="closeVideo" id="closescreensharing" style="position: absolute; right: 1%;" title="Close Screen Share">
         </div></h1>
         <iframe width="100%" height="100%" id="screensharingiframe" src="" style="margin-left:5%;" scrolling="no"></iframe>
       </div>
