App and Login screen css changes

--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -7,7 +7,7 @@
     <meta name="title" content="Live online presentations" />
     <meta name="description" content="Free online web presentations. Social chat, video presentation, personal presentation notes, password protection and much more." />
     <meta name="keywords" content="web presentations, web presentation, presentation, powerpoint, free, free online presentation, free presentation, slide, slides, free slides, powerpoint replacement">
-	<meta name="viewport" content="width=device-width, initial-scale=0.9">
+	<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
     <!-- Bootstrap Core CSS -->
     <link href="../../new_template/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -114,7 +114,6 @@
         <div class="col-xs-12 remoteTitle">PRE<span style='color:red'>Z</span>ERA</div>
 
 			<div class="loginbody">
-				<!--h3>Sign In</h3-->
 				<h4 id="noticeForm" style="color: #FF0000; display:none"></h4>
                 <form role="form" id="pres_login">
                     <div class="form-group">
@@ -136,9 +135,9 @@
         <div class="col-xs-12 remoteTitle">PRE<span style='color:red'>Z</span>ERA</div>
         <div class="simplePage">
           <h3 style='text-align:center; margin-top:0px;'>How to get a presentation ID & password?</h3>
-		  <ul>
+		  <ul id="howToGetPresentationId">
 			<li>Open your presentation in a web browser</li>
-			<li>Open main meny and click 'Get presenter password'<br><img src="/app/remote/img/getkey.png"></li>
+			<li>Open main meny and click 'Get presenter password'<br><img src="./img/getkey.png"></li>
 			<li>After that the system will show you your presentation access credentials</li>
 		  </ul>
 		  	<a href="javascript:showView('slideLogin')" class="backLink">&#9664; Back to Home.</a>
