--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -134,10 +134,10 @@
 	<section id="getKey" class="login mainbackground allData">
         <div class="col-xs-12 remoteTitle">PRE<span style='color:red'>Z</span>ERA</div>
         <div class="simplePage">
-          <h3 style='text-align:center; margin-top:0px;'>How to get a presentation ID & password?</h3>
+          <h3 style='text-align:center; margin-top:3%; font-size:3vw'>How to get a presentation ID & password?</h3>
 		      <ul id="howToGetPresentationId">
 			      <li>Open your presentation in a web browser</li>
-			      <li>Open main meny and click 'Get presenter password'<br><img src="./img/getkey.png"></li>
+			      <li>Open main meny and click 'Get presenter password'<br><img src="./img/getkey.png" alt="get key" id="img_get_key";></li>
 			      <li>After that the system will show you your presentation access credentials</li>
 		      </ul>
 		  	<a href="javascript:showView('slideLogin')" class="backLink">&#9664; Back to Home.</a>
