--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -43,7 +43,7 @@
 						mySlide += '<td width="150"><a href="/p/' + key + '"><img src="/p/'+ key +'/img0.jpg" class="img-rounded" width="90%"></a></td>';
 						mySlide += '<td><a href="/p/' + key + '">'+data.title+'</a><br><br><a href="#" onclick="deleteSlide(\''+ key +'\')">Delete slide</a></td>';
 						mySlide += '</tr>';
-						$("#myPresTable").append(mySlide);
+						$("#myPresTable").prepend(mySlide);
 
 					}
 				});
