Changed redirect in app to Javascript

--- a/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
+++ b/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
@@ -4,12 +4,16 @@
         <meta charset="utf-8" content="user-scalable=yes">
         <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
             <title>PRESENTATION REMOTE CONTROL</title>
-          <meta http-equiv="refresh" content="0;  url=https://www.prezera.com/app/remote" />
 
-                </head>
-    <body style="padding:0px;margin:0px;">
+	</head>
+    <body style="padding:0px;margin:0px;" onload="redirect()">
 
 
+	<script>
+	function redirect () {
+		location.href="https://www.prezera.com/app/remote";
+	}
+	</script>
 
     </body>
 </html>
