--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -41,7 +41,7 @@
 						var mySlide = "";
 						mySlide += '<tr id="slide_'+ key  +'">';
 						mySlide += '<td width="150"><a href="/p/' + key + '"><img src="/p/'+ key +'/img0.jpg" class="img-rounded" width="90%"></a></td>';
-						mySlide += '<td><a href="/p/' + key + '">'+data.title+'</a><br><br><a href="#" onclick="deleteSlide(\''+ key +'\')">Delete slide</a></td>';
+						mySlide += '<td><a href="/p/' + key + '">'+data.title+'</a><br><br><a href="#" onclick="deleteSlide(\''+ key +'\')">Delete presentation</a></td>';
 						mySlide += '</tr>';
 						$("#myPresTable").prepend(mySlide);
 
