--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -75,7 +75,7 @@
 						}
 						data[$("#pres_id").val()] = $("#pres_pass").val();
 						localStorage.setItem("presentationsLocal", JSON.stringify(data));
-						location.href="/p/" + $("#pres_id").val();
+            setTimeout(function(){location.href="/p/" + $("#pres_id").val();},2000);
 					}
 				});
 			}
