add a new separate css for app app-stylish-portfolio.css

--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- Custom CSS -->
-    <link href="../../new_template/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="../../new_template/css/app-stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="../../new_template/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -145,7 +145,7 @@
           <h3 style='text-align:center; margin-top:3%; font-size:3vw'>How to get a presentation ID & password?</h3>
 		      <ul id="howToGetPresentationId">
 			      <li>Open your presentation in a web browser</li>
-			      <li>Open main meny and click 'Get presenter password'<br><img src="./img/getkey.png" alt="get key" id="img_get_key";></li>
+			      <li>Open main menu and click 'Get presenter password'<br><img src="./img/getkey.png" alt="get key" id="img_get_key";></li>
 			      <li>After that the system will show you your presentation access credentials</li>
 		      </ul>
 		  	<a href="javascript:showView('slideLogin')" class="backLink">&#9664; Back to Home.</a>
