Added hash to app

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -75,6 +75,7 @@
 			</div>
 			<!--<div class="UI button button_unpressed" id="backButtonMobile" style="display: none" onclick="location.href='/app/remote/'">BACK</div>-->
 			<a id="backButtonMobile" href="/app/remote/">&#9664; Back to Home</a>
+			<span id="presentationHashMobile"></span>
 			<!--<span class="UI" id="timeDisplay">start &#8986;</span>--><br>
 	</div>
 
