--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -121,21 +121,21 @@
     <section id="slideLogin" class="login mainbackground allData">
         <div class="col-xs-12 remoteTitle">PRE<span style='color:red'>Z</span>ERA</div>
 
-			<div class="loginbody">
-				<h4 id="noticeForm" style="color: #FF0000; display:none"></h4>
-                <form role="form" id="pres_login">
-                    <div class="form-group">
-                        <input id="pres_id" class="login-form-control" placeholder="enter presentation ID" style="text-transform: lowercase;">
-                    </div>
-                    <div class="form-group">
-                        <input id="pres_pass" type="password" class="login-form-control" name="password" placeholder="enter presentation password">
-                    </div>
+        <h4 id="noticeForm" style="color: #FF0000; display:none"></h4>
+		<div class="loginbody">
+        <form role="form" id="pres_login">
+          <div class="form-group">
+            <input id="pres_id" class="login-form-control" placeholder="enter presentation ID" style="text-transform: lowercase;">
+          </div>
+          <div class="form-group">
+            <input id="pres_pass" type="password" class="login-form-control" name="password" placeholder="enter presentation password">
+          </div>
 					<span class="btn-group" id="buttonGroup">
-                    	<input type="button" id="pres_login_button" style="font-size:18px;" value="Open presentation" class="btn btn-default">
+            <input type="button" id="pres_login_button" style="font-size:18px;" value="Open presentation" class="btn btn-default">
 					</span>
-					<center style="margin-top:10px"><a href="javascript:showView('getKey');">How to get a presentation ID &amp; password?</a></center>
+					<center><a href="javascript:showView('getKey');">How to get a presentation ID &amp; password?</a></center>
 				</form>
-            </div>
+      </div>
     </section>
 
 
