--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -68,7 +68,7 @@
 						showError("Wrong key");
 					}
 					else {
-						showError("Key accepted, opening to presentation...");
+						showError("");
 						var data = {};
 						if(localStorage.getItem("presentationsLocal")) {
 							data = JSON.parse(localStorage.getItem("presentationsLocal"));
