--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- Custom CSS -->
-    <link href="new_template/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="new_template/css/main-page-stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="new_template/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -90,7 +90,7 @@
 				<% } %>
             <li><a href="#myPres" class="myPres menuLinkOther">My presentations</a></li>
             <li><a href="/logout" data-index="three" class="menuLinkNoScroll">Sign out</a></li>
-            <% } %>
+            <% } %> <!-- node module EJS-->
         </ul>
     </nav>
 
@@ -100,7 +100,9 @@
     <div class="modal-dialog uploadDialog" id="upload_presentation">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="location.reload()"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="location.reload()">
+                  <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
                 <h3 id="uploadLabel">Uploading presentation...</h3>
@@ -405,7 +407,7 @@
 						<td>Silver<br>
 						The same as our Basic plan + you can get your own domain on PREZERA, example: john.prezera.com<br>
 						Plus you would able to get custom names for your presentation for free! Example: john.prezera.com/MyPresentation<br>
-						4.99$/year<br>
+						$4.99/year<br>
 						<% if (!user) { %>
 							<input type="button" value="Register" class="btn btn-default" onclick="$('.signUpUser').click();$('#signUpAccType').val('silver');">
 						<% } else { %>
@@ -431,7 +433,7 @@
 						<tr>
 						<td>Gold<br>
 						The same as our Silver plan + unlimited presentations + 100mb of space<br>
-						9.99$/year<br>
+						$9.99/year<br>
 						<% if (!user) { %>
 							<input type="button" value="Register" class="btn btn-default" onclick="$('.signUpUser').click();$('#signUpAccType').val('gold');">
 						<% } else { %>
