--- a/AWS_Website/www_static/A1/webrtc/v-twilio-client.html
+++ b/AWS_Website/www_static/A1/webrtc/v-twilio-client.html
@@ -1,20 +1,18 @@
 <html>
   <head>
     <title>Twilio Video - Conversations Quickstart</title>
-    <link rel="stylesheet" href="https://media.twiliocdn.com/sdk/quickstart/conversations-quickstart.min.css">
+    <!--link rel="stylesheet" href="https://media.twiliocdn.com/sdk/quickstart/conversations-quickstart.min.css"-->
+    <style>
+      #remote-media{width:270px;height:202px;border:1px solid #cececc;}
+      #remote-media video{max-width:100%;max-height:100%;border:none}
+      #log {display: none}
+    </style>
   </head>
   <body>
   <div id="remote-media"></div>
   <div id="controls">
     <div id="preview">
-      <p class="instructions">Lookin' good!</p>
       <div id="local-media"></div>
-      <button id="button-preview">Preview My Camera</button>
-    </div>
-    <div id="invite-controls">
-      <p class="instructions">Invite another Conversations Client</p>
-      <input id="invite-to" type="text" placeholder="Identity to send an invite to" />
-      <button id="button-invite">Connect</button>
     </div>
     <div id="log">
       <p>&gt;&nbsp;<span id="log-content">Preparing to listen</span>...</p>
@@ -27,8 +25,15 @@
   var accessToken = '<%= token %>';
   var presenter = <%= presenter %>;
   var username = "<%= user %>";
+  var hash = "<%= hash %>";
+  var videoPresenterSocket;
+  if(typeof parent.socket != "undefined") {
+  	videoPresenterSocket = parent.socket
+  }
+  else {
+  	videoPresenterSocket = io.connect(document.location.hostname + ':' + location.port);
+  }
   </script>
-  <script src="quickstart.js"></script>
-  <iframe id="chat" width="300" height="300" src="/chat.html?presentation=testPres" style="position: absolute; top: 10px; left: 10px"  scrolling="no" frameborder="0"></iframe>
+  <script src="/A1/js/twilio.js"></script>
   </body>
 </html>
