--- a/AWS_Website/www_static/A1/webrtc/v-twilio-presenter.html
+++ b/AWS_Website/www_static/A1/webrtc/v-twilio-presenter.html
@@ -5,6 +5,7 @@
     <style>
       #local-media{width:270px;height:202px;border:1px solid #cececc;}
       #local-media video{max-width:100%;max-height:100%;border:none}
+      #log {display: none}
     </style>
   </head>
   <body>
@@ -12,10 +13,6 @@
   <div id="controls">
     <div id="preview">
       <div id="local-media"></div>
-    </div>
-    <div id="invite-controls">
-      <input id="invite-to" type="text" placeholder="Identity to send an invite to" />
-      <button id="button-invite">Connect</button>
     </div>
     <div id="log">
       <p>&gt;&nbsp;<span id="log-content">Preparing to listen</span>...</p>
