Google console ver + bot page fixes

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 
 <head>
+  <meta name="google-site-verification" content="7nn9RPhUUyIYiZuIowxrBTEC0nGRt64itGJ7Ns0emjk" />
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title><% if (user) { %> <%= user.email %> <%} %> WEB PRESENTATIONS (live)</title>
