--- a/AWS_Website/www_static/domain.html
+++ b/AWS_Website/www_static/domain.html
@@ -7,11 +7,11 @@
     <meta name="title" content="Live online presentations" />
     <meta name="description" content="Free online web presentations. Social chat, video presentation, personal presentation notes, password protection and much more." />
     <meta name="keywords" content="web presentations, web presentation, presentation, powerpoint, free, free online presentation, free presentation, slide, slides, free slides, powerpoint replacement">
-  <meta content="https://www.webentations.com" property="og:url" />
-    <meta content="https://www.webentations.com/img/logo.png" property="og:image" />
+  <meta content="https://www.prezera.com" property="og:url" />
+    <meta content="https://www.prezera.com/img/logo.png" property="og:image" />
     <link rel="shortcut icon" id="favicon" href="img/favicon.ico">
     <meta name="author" content="WEBENTATIONS inc.">
-    <link rel="canonical" href="https://www.webentations.com" />
+    <link rel="canonical" href="https://www.prezera.com" />
 	<meta name="viewport" content="width=device-width, initial-scale=0.9">
 	<!-- Facebook specific tags -->
 	<meta property="og:image" content="img/Prezera_Logo.png" />
