--- a/AWS_Website/www_static/A1/webrtc/o-video-client.html
+++ b/AWS_Website/www_static/A1/webrtc/o-video-client.html
@@ -1,6 +1,13 @@
 
 <html>
-  <head></head>
+  <head>
+  <style>
+    #subscribersDiv {
+      width: 90%    !important;
+      height: 100%   !important;
+    }
+  </style>
+  </head>
   <body>
     <div id='myPublisherDiv'></div>
     <div id='subscribersDiv'></div>
