--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -315,7 +315,7 @@
         <div class="simplePage">
           <h3>My presentations</h3>
            <table class="table" style="max-width: 100%">
-
+             <%= video %>
 
       <% if (userData.domainSet == 0) { %>
   			<% slides.forEach(function(slide){ %>
